Adjust Webcodecs URLs and references throughout
There remained a few places that still targeted `wicg.github.io`. This update
also uses uppercase characters consistently for all references to WebCodecs.

--- a/avc_codec_registration.src.html
+++ b/avc_codec_registration.src.html
@@ -33,7 +33,7 @@ Markup Shorthands:css no, markdown yes, dfn yes
 </pre>
 
 <pre class='anchors'>
-spec: webcodecs; urlPrefix: https://wicg.github.io/web-codecs/#
+spec: WEBCODECS; urlPrefix: https://w3c.github.io/webcodecs/#
     type: attribute
         text: VideoDecoderConfig.description; url: dom-videodecoderconfig-description
     type: interface
@@ -47,14 +47,14 @@ spec: webcodecs; urlPrefix: https://wicg.github.io/web-codecs/#
 <pre class='biblio'>
 {
   "WEBCODECS": {
-      "href": "https://wicg.github.io/web-codecs/",
+      "href": "https://w3c.github.io/webcodecs/",
       "title": "WebCodecs",
-      "publisher": "WICG"
+      "publisher": "W3C"
   },
   "WEBCODECS-CODEC-REGISTRY": {
-      "href": "https://wicg.github.io/web-codecs/codec_registry.html",
+      "href": "https://w3c.github.io/webcodecs/codec_registry.html",
       "title": "WebCodecs Codec Registry",
-      "publisher": "WICG"
+      "publisher": "W3C"
   },
   "ITU-T-REC-H.264": {
     "href": "https://www.itu.int/rec/T-REC-H.264",
