--- a/codec_registry.src.html
+++ b/codec_registry.src.html
@@ -14,10 +14,10 @@ Boilerplate: omit conformance
 Text macro: NOTE yes
 
 Abstract: This registry is intended to enhance interoperability among
-    implementations and users of [[webcodecs]]. In particular, this
+    implementations and users of [[WEBCODECS]]. In particular, this
     registry provides the means to identify and avoid collisions among codec
     strings and provides a mechanism to define codec-specific members of
-    [[webcodecs]] codec configuration dictionaries.
+    [[WEBCODECS]] codec configuration dictionaries.
 
     This registry is not intended to include any information on whether a codec
     format is encumbered by intellectual property claims. Implementers and
@@ -35,7 +35,7 @@ Markup Shorthands:css no, markdown yes, dfn yes
 </pre>
 
 <pre class='anchors'>
-spec: web-codecs; urlPrefix: https://wicg.github.io/web-codecs/#
+spec: WEBCODECS; urlPrefix: https://w3c.github.io/webcodecs/#
     type: attribute
         text: AudioDecoderConfig.description; url: dom-audiodecoderconfig-description
         text: VideoDecoderConfig.description; url: dom-videodecoderconfig-description
@@ -46,14 +46,14 @@ spec: web-codecs; urlPrefix: https://wicg.github.io/web-codecs/#
 <pre class='biblio'>
 {
   "WEBCODECS": {
-      "href": "https://wicg.github.io/web-codecs/",
+      "href": "https://w3c.github.io/webcodecs/",
       "title": "WebCodecs",
-      "publisher": "WICG"
+      "publisher": "W3C"
   },
   "WEBCODECS-AVC-REGISTRATION": {
-      "href": "https://wicg.github.io/web-codecs/avc_codec_registration.html",
+      "href": "https://w3c.github.io/webcodecs/avc_codec_registration.html",
       "title": "AVC (H.264) WebCodecs Registration",
-      "publisher": "WICG"
+      "publisher": "W3C"
   }
 }
 </pre>
