--- a/index.src.html
+++ b/index.src.html
@@ -73,9 +73,9 @@ spec: media-capabilities; urlPrefix: https://w3c.github.io/media-capabilities/#
 <pre class='biblio'>
 {
   "WEBCODECS-CODEC-REGISTRY": {
-      "href": "https://wicg.github.io/webcodecs/codec_registry.html",
+      "href": "https://w3c.github.io/webcodecs/codec_registry.html",
       "title": "WebCodecs Codec Registry",
-      "publisher": "WICG"
+      "publisher": "W3C"
   }
 }
 </pre>
