Add Privacy and Security Considerations sections
This adds a Privacy and Security Consideration section to registry notes that
targets the relevants sections in the main WebCodecs spec.

Bikeshed no longer issue any warning as a result and this update also makes the
build die on warnings again.

--- a/avc_codec_registration.src.html
+++ b/avc_codec_registration.src.html
@@ -173,3 +173,10 @@ SPS and PPS are described in greater detail in sections G.3.41 and G.3.55 of
         section 5.3.3.1. This format is commonly used in .MP4 files, where the
         player generally has random access to the media data.
 </dl>
+
+Privacy and Security Considerations {#privacy-and-security-considerations}
+==========================================================================
+
+Please refer to the [[WEBCODECS#privacy-considerations|Privacy Considerations]]
+and [[WEBCODECS#security-considerations|Security Considerations]] sections in
+[[WEBCODECS]].
