--- a/codec_registry.src.html
+++ b/codec_registry.src.html
@@ -171,3 +171,10 @@ ISSUE: Several registrations contain TODOs which should be replaced with links
     <td>TODO (string)</td>
   </tr>
 </table>
+
+Privacy and Security Considerations {#privacy-and-security-considerations}
+==========================================================================
+
+Please refer to the [[WEBCODECS#privacy-considerations|Privacy Considerations]]
+and [[WEBCODECS#security-considerations|Security Considerations]] sections in
+[[WEBCODECS]].
