Adjust metadata following publication as FPWD
Changes:
- Add link to the TR document
- Add link to previous version
- Drop now useless local biblio, as specs now exist in Specref. Anchors sections
are still needed for now though.
- google.com is a permanent redirect to www.google.com, use the latter form
to avoid the redirect.

--- a/codec_registry.src.html
+++ b/codec_registry.src.html
@@ -6,7 +6,9 @@ Shortname: webcodecs-codec-registry
 Level: none
 Group: mediawg
 ED: https://w3c.github.io/webcodecs/codec_registry.html
-Editor: Chris Cunningham, w3cid 114832, Google Inc. https://google.com/
+TR: https://www.w3.org/TR/webcodecs-codec-registry/
+Previous Version: from biblio
+Editor: Chris Cunningham, w3cid 114832, Google Inc. https://www.google.com/
 Editor: Paul Adenot, w3cid 62410, Mozilla https://www.mozilla.org/
 Editor: Bernard Aboba, w3cid 65611, Microsoft Corporation https://www.microsoft.com/
 
@@ -43,20 +45,6 @@ spec: WEBCODECS; urlPrefix: https://w3c.github.io/webcodecs/#
         text: AudioEncoderConfig; url: audio-encoder-config
 </pre>
 
-<pre class='biblio'>
-{
-  "WEBCODECS": {
-      "href": "https://w3c.github.io/webcodecs/",
-      "title": "WebCodecs",
-      "publisher": "W3C"
-  },
-  "WEBCODECS-AVC-REGISTRATION": {
-      "href": "https://w3c.github.io/webcodecs/avc_codec_registration.html",
-      "title": "AVC (H.264) WebCodecs Registration",
-      "publisher": "W3C"
-  }
-}
-</pre>
 
 Organization {#organization}
 ============================
@@ -158,7 +146,7 @@ ISSUE: Several registrations contain TODOs which should be replaced with links
   <tr>
     <td>avc1.*</td>
     <td>AVC / H.264</td>
-    <td>[AVC (H.264) WebCodecs Registration](avc_codec_registration.html) [[WEBCODECS-AVC-REGISTRATION]]</td>
+    <td>[AVC (H.264) WebCodecs Registration](avc_codec_registration.html) [[WEBCODECS-AVC-CODEC-REGISTRATION]]</td>
   </tr>
   <tr>
     <td>vp8</td>
