--- a/avc_codec_registration.src.html
+++ b/avc_codec_registration.src.html
@@ -6,7 +6,9 @@ Shortname: webcodecs-avc-codec-registration
 Level: none
 Group: mediawg
 ED: https://w3c.github.io/webcodecs/avc_codec_registration.html
-Editor: Chris Cunningham, w3cid 114832, Google Inc. https://google.com/
+TR: https://www.w3.org/TR/webcodecs-avc-codec-registration/
+Previous Version: from biblio
+Editor: Chris Cunningham, w3cid 114832, Google Inc. https://www.google.com/
 Editor: Paul Adenot, w3cid 62410, Mozilla https://www.mozilla.org/
 Editor: Bernard Aboba, w3cid 65611, Microsoft Corporation https://www.microsoft.com/
 
@@ -46,16 +48,6 @@ spec: WEBCODECS; urlPrefix: https://w3c.github.io/webcodecs/#
 
 <pre class='biblio'>
 {
-  "WEBCODECS": {
-      "href": "https://w3c.github.io/webcodecs/",
-      "title": "WebCodecs",
-      "publisher": "W3C"
-  },
-  "WEBCODECS-CODEC-REGISTRY": {
-      "href": "https://w3c.github.io/webcodecs/codec_registry.html",
-      "title": "WebCodecs Codec Registry",
-      "publisher": "W3C"
-  },
   "ITU-T-REC-H.264": {
     "href": "https://www.itu.int/rec/T-REC-H.264",
     "title": "H.264 : Advanced video coding for generic audiovisual services",
