--- a/index.src.html
+++ b/index.src.html
@@ -3,10 +3,12 @@ Title: WebCodecs
 Repository: w3c/webcodecs
 Status: ED
 ED: https://w3c.github.io/webcodecs/
+TR: https://www.w3.org/TR/webcodecs/
+Previous Version: from biblio
 Shortname: webcodecs
 Level: None
 Group: mediawg
-Editor: Chris Cunningham, w3cid 114832, Google Inc. https://google.com/
+Editor: Chris Cunningham, w3cid 114832, Google Inc. https://www.google.com/
 Editor: Paul Adenot, w3cid 62410, Mozilla https://www.mozilla.org/
 Editor: Bernard Aboba, w3cid 65611, Microsoft Corporation https://www.microsoft.com/
 
@@ -68,16 +70,6 @@ spec: mediastream-recording; urlPrefix: https://www.w3.org/TR/mediastream-record
 spec: media-capabilities; urlPrefix: https://w3c.github.io/media-capabilities/#
     type: method; text: decodingInfo(); url: dom-mediacapabilities-decodinginfo
     type: attribute; text: powerEfficient; url: dom-mediacapabilitiesinfo-powerefficient
-</pre>
-
-<pre class='biblio'>
-{
-  "WEBCODECS-CODEC-REGISTRY": {
-      "href": "https://w3c.github.io/webcodecs/codec_registry.html",
-      "title": "WebCodecs Codec Registry",
-      "publisher": "W3C"
-  }
-}
 </pre>
 
 
