--- a/index.src.html
+++ b/index.src.html
@@ -54,7 +54,6 @@ spec: html; urlPrefix: https://html.spec.whatwg.org/multipage/;
         type: dfn; text: entry settings object; url: webappapis.html#entry-settings-object
     for: media;
         type: dfn; text: current playback position; url: media.html#current-playback-position
-        type: dfn; text: intrinsic width; url: media.html#concept-video-intrinsic-width
     type: dfn; text: live; url: infrastructure.html#live
 
 spec: mediacapture-streams; urlPrefix: https://www.w3.org/TR/mediacapture-streams/
@@ -687,16 +686,15 @@ Algorithms {#videodecoder-algorithms}
             {{VideoFramePlaneInit/cropHeight}}
             be the crop region of the decoded video frame |output| in
             pixels, prior to any aspect ratio adjustments.
-        5. If |displayAspectWidth| and |displayAspectWidth| are provided,
-            assign the value of the decoded video frame size in pixel to either
-            {{VideoFramePlaneInit/displayWidth}} or
-            {{VideoFramePlaneInit/displayHeight}}, and scale up the other
-            dimension to match the ratio of |displayAspectWidth| and
-            |displayAspectHeight|, as described by the definitions of
-            [=intrinsic width|intrinsic size=].
-        6. Otherwise, let {{VideoFramePlaneInit/displayWidth}} and
-            {{VideoFramePlaneInit/displayHeight}} be the display size of
-            the decoded video frame in pixels.
+        5. Let |displayWidth| and |displayHeight| be the the display size of
+            the decoded frame in pixels.
+        6. If |displayAspectWidth| and |displayAspectHeight| are provided,
+            increase |displayWidth| or |displayHeight| until the ratio of
+            |displayWidth| to |displayHeight| matches the ratio of
+            |displayAspectWidth| to |displayAspectHeight|.
+        7. Assign the value of |displayWidth| and |displayHeight| to
+            {{VideoFramePlaneInit/displayWidth}} and
+            {{VideoFramePlaneInit/displayHeight}} respectively.
     4. Return a new {{VideoFrame}}, constructed with |pixelFormat|,
         |planes|, and |init|.
   </dd>
@@ -1450,11 +1448,17 @@ To check if a {{VideoDecoderConfig}} is a <dfn>valid VideoDecoderConfig</dfn>,
 run these steps:
 1. If {{VideoDecoderConfig/codec}} is not a <a>valid codec string</a>, return
     `false`.
-2. If {{VideoDecoderConfig/codedWidth}} = 0 or
+2. If one of {{VideoDecoderConfig/codedWidth}} or
+    {{VideoDecoderConfig/codedHeight}} is provided but the other isn't,
+    return `false`.
+3. If {{VideoDecoderConfig/codedWidth}} = 0 or
     {{VideoDecoderConfig/codedHeight}} = 0, return `false`.
-3. If {{VideoDecoderConfig/displayAspectWidth}} = 0 or
-    {{VideoDecoderConfig/displayAspectWidth}} = 0, return `false`.
-4. Return `true`.
+4. If one of {{VideoDecoderConfig/displayAspectWidth}} or
+    {{VideoDecoderConfig/displayAspectHeight}} is provided but the other isn't,
+    return `false`.
+5. If {{VideoDecoderConfig/displayAspectWidth}} = 0 or
+    {{VideoDecoderConfig/displayAspectHeight}} = 0, return `false`.
+6. Return `true`.
 
 <dl>
   <dt><dfn dict-member for=VideoDecoderConfig>codec</dfn></dt>
@@ -1482,16 +1486,16 @@ run these steps:
   </dd>
 
   NOTE: {{VideoDecoderConfig/codedWidth}} and {{VideoDecoderConfig/codedHeight}}
-    are used as hints when selecting a {{VideoDecoder/[[codec implementation]]}}.
+    are when selecting a {{VideoDecoder/[[codec implementation]]}}.
 
   <dt><dfn dict-member for=VideoDecoderConfig>displayAspectWidth</dfn></dt>
   <dd>
-    Horizontal component of the VideoFrame's aspect ratio when displayed.
+    Horizontal dimension of the VideoFrame's aspect ratio when displayed.
   </dd>
 
   <dt><dfn dict-member for=VideoDecoderConfig>displayAspectHeight</dfn></dt>
   <dd>
-    Vertical component of the VideoFrame's aspect ratio when displayed.
+    Vertical dimension of the VideoFrame's aspect ratio when displayed.
   </dd>
 
 Note: {{VideoFrame/displayWidth}} and {{VideoFrame/displayHeight}} can both be
