--- a/index.src.html
+++ b/index.src.html
@@ -1960,7 +1960,7 @@ interface AudioData {
   readonly attribute long long duration;     // microseconds
   readonly attribute long long timestamp;    // microseconds
 
-  unsigned long byteLength(AudioDataCopyToOptions options);
+  unsigned long allocationSize(AudioDataCopyToOptions options);
   undefined copyTo([AllowShared] BufferSource destination, AudioDataCopyToOptions options);
   AudioData clone();
   undefined close();
@@ -2064,16 +2064,17 @@ dictionary AudioDataInit {
     3. Return the product of |durationInSeconds| and |microsecondsPerSecond|.
 
 ### Methods ###{#audiodata-methods}
-: <dfn method for=AudioData>byteLength(|options|)</dfn>
+: <dfn method for=AudioData>allocationSize(|options|)</dfn>
 :: Returns the number of bytes required to hold the samples as described by
     |options|.
 
     When invoked, run these steps:
-    1. Let |copyFrameCount| be the result of running the
-        [=Compute Copy Frame Count=] algorithm with |options|.
+    1. Let |copyElementCount| be the result of running the
+        [=Compute Copy Element Count=] algorithm with |options|.
     2. Let |bytesPerSample| be the number of bytes per sample, as defined by
         the {{AudioData/[[sample format]]}}.
-    3. Return the product of multiplying |bytesPerSample| by |copyFrameCount|.
+    3. Return the product of multiplying |bytesPerSample| by
+        |copyElementCount|.
 
 : <dfn method for=AudioData>copyTo(|destination|, |options|)</dfn>
 :: Copies the samples from the specified plane of the {{AudioData}} to the
@@ -2082,19 +2083,19 @@ dictionary AudioDataInit {
     When invoked, run these steps:
     1. If the value of |frame|'s {{AudioData/[[detached]]}} internal slot is
         `true`, throw an {{InvalidStateError}} {{DOMException}}.
-    2. Let |copyFrameCount| be the result of running the
-        [=Compute Copy Frame Count=] algorithm with |options|.
+    2. Let |copyElementCount| be the result of running the
+        [=Compute Copy Element Count=] algorithm with |options|.
     3. Let |bytesPerSample| be the number of bytes per sample, as defined by
         the {{AudioData/[[sample format]]}}.
-    4. If the product of multiplying |bytesPerSample| by |copyFrameCount| is
+    4. If the product of multiplying |bytesPerSample| by |copyElementCount| is
         greater than `destination.byteLength`, throw a {{RangeError}}.
     5. Let |resource| be the [=media resource=] referenced by
         {{AudioData/[[resource reference]]}}.
     6. Let |planeFrames| be the region of |resource| corresponding to
         |options|.{{AudioDataCopyToOptions/planeIndex}}.
-    7. Copy frames of |planeFrames| into |destination|, starting with the
+    7. Copy elements of |planeFrames| into |destination|, starting with the
         frame positioned at |options|.{{AudioDataCopyToOptions/frameOffset}}
-        and stopping after |copyFrameCount| frames have been copied.
+        and stopping after |copyElementCount| elements have been copied.
 
 : <dfn method for=AudioData>clone()</dfn>
 :: Creates a new AudioData with a reference to the same [=media resource=].
@@ -2115,14 +2116,10 @@ dictionary AudioDataInit {
 
 ### Algorithms ### {#audiodata-algorithms}
 
-: <dfn>Compute Copy Frame Count</dfn> (with |options|)
+: <dfn>Compute Copy Element Count</dfn> (with |options|)
 :: Run these steps:
     1. Let |frameCount| be the number of frames in the plane identified by
         |options|.{{AudioDataCopyToOptions/planeIndex}}.
-
-        NOTE: For interleaved formats with a single plane, |frameCount| will
-            be the total number of frames accross all channels.
-
     2. If |options|.{{AudioDataCopyToOptions/frameOffset}} is greater than or
         equal to |frameCount|, throw a {{RangeError}}.
     3. Let |copyFrameCount| be the difference of subtracting
@@ -2132,7 +2129,11 @@ dictionary AudioDataInit {
             |copyFrameCount|, throw a {{RangeError}}.
         2. Otherwise, assign |options|.{{AudioDataCopyToOptions/frameCount}}
             to |copyFrameCount|.
-    5. return |copyFrameCount|.
+    5. Let |elementCount| be |copyFrameCount|.
+    6. If {{AudioData/[[sample format]]}} describes an interleaved
+        {{AudioSampleFormat}}, mutliply |elementCount| by
+        {{AudioData/[[number of channels]]}}
+    7. return |elementCount|.
 
 : <dfn>Clone AudioData</dfn> (with |data|)
 :: Run these steps:
