--- a/index.src.html
+++ b/index.src.html
@@ -327,20 +327,11 @@ Methods {#audiodecoder-methods}
     2. If {{AudioDecoder/[[key chunk required]]}} is `true`:
         1. If |chunk|.{{EncodedAudioChunk/type}} is not
             {{EncodedAudioChunkType/key}}, throw a {{DataError}}.
-
-            <div class='note'>
-            NOTE: Authors are strongly encouraged to construct
-                {{EncodedAudioChunk}}s with the correct
-                {{EncodedAudioChunkInit/type}}. Providing the incorrect type
-                may lead to undefined behavior, including fatal errors.
-
-                Implementers may inspect the chunk's
-                {{EncodedAudioChunk/[[internal data]]}} to verify that the
-                chunk provided is truly a [=key chunk=]. If a mismatch is
-                detected, user agents should throw a {{DataError}}.
-            </div>
-
-        2. Otherwise, assign `false` to
+        2. Implementers should inspect the |chunk|'s
+            {{EncodedAudioChunk/[[internal data]]}} to verify that
+            it is truly a [=key chunk=]. If a mismatch is detected, throw a
+            {{DataError}}.
+        3. Otherwise, assign `false` to
             {{AudioDecoder/[[key chunk required]]}}.
     3. Increment {{AudioDecoder/decodeQueueSize}}.
     4. [=Queue a control message=] to decode the |chunk|.
